2000-12-09
----------
* Restructured DB_Init in DB.pm

2000-12-07 Tobi
----------
* Improved descrition of how to COMMENT in the gedafe-sql manpage

2000-12-06
----------
* released version 0.9.15
* remove some "Use of uninitialized value"

2000-11-29 Tobi
----------
* added check to /\n/<br>/ to make sure it does not happen on fields with html contents
* added varchar field type ... it now sets the MAXLENGTH property of the INPUT field

2000-11-25
----------
* made tables with no comments at all work
* released version 0.9.14
* if a comment is not defined for a field, take the comment for a
  field with the same name
* if a comment is not defined for a xy_list view, take it from the xy table

2000-11-23
----------
* released version 0.9.13
* show only selectable tables and views in the entry page
* use relative url for images

2000-11-18
----------
* released version 0.9.12
* the hid2id and id2hid functions must not be specified anymore

2000-11-16
----------
* reimplement (0,1) -> (no,yes) conversion for boolean types
* released version 0.9.11
* convert multiple '\n' to <BR>
* removed old commmented-out code

2000-11-15
----------
* released version 0.9.10
* small documentation fixes
* cleaned up html<->db conversion
* added conversion from \n to <BR> in list and listrep pages
* combo-boxes now only show 'text' instead of 'id -- text'

2000-11-14
----------
* released version 0.9.9
* removed misleading Makefile in distribution
* added missing example/README

2000-11-03
----------
* released version 0.9.8
* documentation fixes
* add $|=1 to demo1.cgi

2000-10-23
----------
* released version 0.9.7
* started the CHANGES file